Init code in index.html

--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
     <script src="face.js"></script>
     <script src="main.js"></script>
     <script src="input.js"></script>
+    <script type="text/javascript">
+        //Init the game!
+        var game = new LightsOut3d(window.innerWidth, window.innerHeight);
+        game.init();
+    </script>
 </body>
 </html>
