Black canvas to match desktop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin: 0;
             position: absolute;
             z-index: -1;
+            background-color: #000;
         }
         html {
             margin: 0;
