Better button name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <h1 id="title">Lights Out: 3D</h1>
-        <button class="btn btn-primary" onclick="game.nextLevel();">Start</button>
+        <button class="btn btn-primary" onclick="game.nextLevel();">Start / Skip to Next</button>
     </div>
 
     <script src="face.js"></script>
