--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             padding: 0;
             color: #fff;
         }
-        h1 {
+        .main {
             text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container main">
         <h1 id="title">Lights Out: 3D</h1>
         <button class="btn btn-primary" onclick="game.nextLevel();">Start / Skip to Next</button>
     </div>
